Added Location domain + rabbitmq
