# src/main/java/pl/tomaszlink/deviceservice/domain/location/models/SendDeviceLocationCommand.java
@@ -1,0 +1,10 @@
+package pl.tomaszlink.deviceservice.domain.location.models;
+
+import java.time.Instant;
+
+public record SendDeviceLocationCommand(
+        Double latitude,
+        Double longitude,
+        Instant timestamp
+) {
+}
